init product type

--- a/TelosysTools/templates/persistence-springdatajpa-TT210-R2/templates.cfg
+++ b/TelosysTools/templates/persistence-springdatajpa-TT210-R2/templates.cfg
@@ -16,7 +16,7 @@ pom_dependencies_persistence.txt     ; pom_dependencies_persistence.txt     ;   
 pom_dependencies_common.txt          ; pom_dependencies_common.txt          ;                                 ; maven/pom_dependencies_common_txt.vm       ; 1
 
 # Entities classes ( with composite key classes if any )
-JPA entity (with links)        ; ${BEANNAME}Entity.java             ; ${SRC}/${ENTITY_PKG}/jpa              ; jpa/jpa_bean_with_links.vm    ; *
+JPA entity (with links)        ; ${BEANNAME}.java             ; ${SRC}/${ENTITY_PKG}/jpa              ; jpa/jpa_bean_with_links.vm    ; *
 
 # Spring Data
 SpringData JPA Repository      ; ${BEANNAME}JpaRepository.java      ; ${SRC}/${ROOT_PKG}/data/repository/jpa     ; repository/repository_interface.vm    ; *
